--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-helmet": "^6.0.0",
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0",
+    "react-player": "^2.6.0",
     "react-scroll": "^1.8.0",
     "react-scrollspy": "^3.4.2",
     "sharp": "^0.25.2",
