--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@react-google-maps/api": "^1.9.12",
     "bootstrap": "^4.5.0",
     "clsx": "^1.1.1",
     "gatsby-image": "^2.3.4",
