--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-hooks-helper": "^1.6.0",
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0",
     "react-player": "^2.6.0",
     "react-scroll": "^1.8.0",
     "react-scrollspy": "^3.4.2",
     "sharp": "^0.25.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "throttle-debounce": "^2.2.1"
   },
   "devDependencies": {
